src/objects/Ter_LogTransaccional__c.object
<CustomObject>
    <description>Objeto para almacenar las transacciones que llegan por los Web Service de Fidelización</description>
    <fields>
        <fullName>Ter_CodigoEstadoRespuesta__c</fullName>
        <label>Código Estado Respuesta</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ter_CodigoTipoEvento__c</fullName>
        <label>Codigo Tipo Evento</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ter_FechaEvento__c</fullName>
        <label>Fecha Evento</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ter_FechaRespuesta__c</fullName>
        <label>Fecha Respuesta</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ter_JsonRequest__c</fullName>
        <label>Json Request</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ter_JsonResponse__c</fullName>
        <label>Json Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ter_TiempoLlegada__c</fullName>
        <label>Tiempo Llegada</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ter_TiempoSalida__c</fullName>
        <label>Tiempo Salida</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ter_Usuario__c</fullName>
        <label>Usuario</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ter_Venta__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Venta</label>
        <referenceTo>Fielo_Venta__c</referenceTo>
        <relationshipLabel>Logs Transaccionales</relationshipLabel>
        <relationshipName>Logs_Transaccionales</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Log Transaccional</label>
    <nameField>
        <displayFormat>LT-{000000000}</displayFormat>
        <label>Nombre de Log Transaccional</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs Transaccionales</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>